[package]
name = "scraper_4chan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["stream"]}
futures = "0.3"
futures-util = "0.3.21"
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0"
colored = "2"
enable_cmd_ansi_colors = {git="https://github.com/srtopster/enable_cmd_ansi_colors"}